[gd_scene load_steps=16 format=2]

[ext_resource path="res://14_camBlend/script/main.gd" type="Script" id=1]
[ext_resource path="res://14_camBlend/script/virtualCamera.gd" type="Script" id=2]
[ext_resource path="res://14_camBlend/script/blendCameraController.gd" type="Script" id=3]
[ext_resource path="res://14_camBlend/PlayerCamera.gd" type="Script" id=4]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="PrismMesh" id=7]
size = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.929412, 0.345098, 0.345098, 1 )

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="Animation" id=5]
resource_name = "New Anim"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 5.4, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -6.05272, 1.26612, -8.81093 ), Vector3( -11.7154, 1.26612, 7.8996 ), Vector3( -2.26152, 1.26612, -8.82264 ), Vector3( -6.05272, 1.26612, -8.81093 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -6.05272, 1.26612, -8.81093 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.26612, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.26612, 0 ), Vector3( 0, 1.26612, 7.10574 ), Vector3( 0, 1.26612, -6.69629 ), Vector3( 0, 1.26612, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0.0392157, 0, 1, 1 )

[sub_resource type="Animation" id=10]
resource_name = "New Anim"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 6.14909, 1.26612, 0 ), Vector3( 7.05572, 1.26612, 3.30782 ), Vector3( 10.5205, 1.26612, -6.32959 ), Vector3( 6.14909, 1.26612, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 6.14909, 1.26612, 0 ) ]
}

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Plane" type="MeshInstance" parent="."]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="VCamera2" type="Camera" parent="Plane"]
transform = Transform( 0.0406971, 0.00826084, -0.0278479, 0.00106356, 0.0474795, 0.0156387, 0.0290279, -0.0133213, 0.0384698, -0.34207, 0.398542, 0.439722 )
current = true
script = ExtResource( 2 )
__meta__ = {
"virtualCamera": true
}
cameraTaget = [ NodePath("../../MeshInstance2"), NodePath("../../MeshInstance1"), NodePath("../../MeshInstance3") ]

[node name="VCamera3" type="Camera" parent="Plane"]
transform = Transform( -0.0254769, -0.0212669, 0.0373985, 0, 0.043464, 0.024716, -0.0430224, 0.0125938, -0.0221466, 0.856795, 0.448049, -0.491069 )
script = ExtResource( 2 )
__meta__ = {
"virtualCamera": true
}
cameraTaget = [ NodePath("../../MeshInstance3") ]

[node name="MeshInstance" type="MeshInstance" parent="Plane"]
transform = Transform( 0.660133, 0, -0.751149, 0, 1, 0, 0.751149, 0, 0.660133, 0.296133, 0.0245549, -0.916365 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="MeshInstance1" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6.05272, 1.26612, -8.81093 )
mesh = SubResource( 2 )

[node name="VCamera" type="Camera" parent="MeshInstance1"]
transform = Transform( 1, 0, 0, 0, 0.494321, -0.869279, 0, 0.869279, 0.494321, 0, -4.89348, 3.51736 )
script = ExtResource( 2 )
__meta__ = {
"virtualCamera": true
}
cameraTaget = [ NodePath("../Position3D") ]

[node name="Position3D" type="Position3D" parent="MeshInstance1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.82584e-08, 1.56157 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance1"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.26612, 0 )
mesh = SubResource( 2 )

[node name="VCamera" type="Camera" parent="MeshInstance2"]
transform = Transform( 1, 0, 0, 0, 0.494321, -0.869279, 0, 0.869279, 0.494321, 0, -4.89348, 3.51736 )
script = ExtResource( 2 )
__meta__ = {
"virtualCamera": true
}
cameraTaget = [ NodePath("../Position3D") ]

[node name="Position3D" type="Position3D" parent="MeshInstance2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.82584e-08, 1.56157 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance2"]
autoplay = "move"
anims/RESET = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 6.14909, 1.26612, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 9 )

[node name="VCamera" type="Camera" parent="MeshInstance3"]
transform = Transform( 1, 0, 0, 0, 0.494321, -0.869279, 0, 0.869279, 0.494321, 0, -4.89348, 3.51736 )
script = ExtResource( 2 )
__meta__ = {
"virtualCamera": true
}

[node name="Position3D" type="Position3D" parent="MeshInstance3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.82584e-08, 1.56157 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MeshInstance3"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="PlayerCamera" type="Camera" parent="."]
transform = Transform( 0.820075, -0.173924, 0.545185, -0.0196137, 0.943593, 0.330526, -0.571919, -0.281749, 0.770406, 14.8856, 8.03422, 14.1814 )
current = true
script = ExtResource( 4 )
target = NodePath("../MeshInstance3")

[node name="BlendCameraController" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="BlendCameraController"]
